[package]
authors = ["Dan Munckton <dangit@munckfish.net>"]
name = "actix-todo"
version = "2.0.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-rc.2"
actix-files = "0.6.0-beta.16"
actix-session = "0.5.0-beta.7"
actix-web-flash-messages = { version = "0.3.0", features=["cookies"] }

dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.1"
log = "0.4.3"
serde = { version = "1.0.69", features = ["derive"] }
serde_json = "1.0.22"
tera = "1.5.0"

[dependencies.sqlx]
features = [
	"runtime-actix-rustls",
	"postgres"
	]
version = "0.5.10"
