[package]
name = "async_data_factory"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.21"
num_cpus = "1.13"
redis = { version = "0.19", default-features = false, features = ["tokio-comp"] }
# redis_tang is an redis pool for test purpose
redis_tang = "0.2"
